++personal page info

--- a/develop/styles/main.scss
+++ b/develop/styles/main.scss
@@ -3,6 +3,9 @@
 @import './components/loginForm.scss';
 @import './components/registerForm.scss';
 @import './components/header.scss';
+@import './components/bigImage.scss';
+@import './components/avatar.scss';
+@import './components/personalInfo.scss';
 
 @import './containers/personalPage.scss';
 
