--- a/develop/styles/main.scss
+++ b/develop/styles/main.scss
@@ -6,6 +6,9 @@
 @import './components/bigImage.scss';
 @import './components/avatar.scss';
 @import './components/personalInfo.scss';
+@import './components/navigation.scss';
+@import './components/post.scss';
+@import './components/postCreator.scss';
 
 @import './containers/personalPage.scss';
 
