--- a/develop/styles/components/avatar.scss
+++ b/develop/styles/components/avatar.scss
@@ -1,11 +1,11 @@
 .AvatarComponent{
-    width: 150px;
+    min-width: 150px;
     height: 150px;
     background-repeat: no-repeat;
     background-size: cover;
     background-position: 50% 50%;
     margin-top: -90px;
-    margin-left: 4%;
+    align-self: center;
     border: 5px solid white;
     border-radius: 9999px;
 }
