--- a/develop/styles/components/personalInfo.scss
+++ b/develop/styles/components/personalInfo.scss
@@ -1,8 +1,9 @@
 .PersonalInfoComponent{
-    width: 250px;
+    width: 100%;
     overflow: hidden;
-    svg + div{
-        max-width: 180px;
+    //that crazy selector for customizing materialUI =.=
+    span > div > div > div:first-of-type{
+        width: 180px;
         overflow: hidden;
         white-space: nowrap;
         text-overflow: ellipsis;
